# December

./: .gitignore  .pre-commit-config.yaml  README.md  git_version.ipynb  main.py  pyproject.toml  requirements.txt
configs/: default_config.yaml
src/core/: base_estimator.py
src/models/: blaze_pose_adapter.py
src/utils/: config_manager.py
